--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- General changes: Properly nested HTML code to increase readability-->
+<!-- General changes: Added alt tags to images for accessibility-->
+<!-- Head section changes: Added a descriptive title-->
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -8,6 +10,7 @@
 </head>
 
 <body>
+<!-- Header section changes: Changed non-semantic div tags to header and nav tags-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -18,7 +21,10 @@
             </ul>
         </nav>
     </header>
-    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg">
+<!-- Added image tag to includ and alt attribute for accessibility-->
+    <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="Business team in a meeting">
+<!-- Main section changes: Changed non-semantic div tags to main and section tags-->
+<!-- Main section changes: Added id tag for search engine optimization section to link with nav anchor-->
     <main class="content">
         <section class="box" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Workstation with a computer and notebook."/>
@@ -26,35 +32,38 @@
             <p>The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.</p>
         </section>
         <section class="box" id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop with a graph and the"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop with a graph."/>
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.</p>
         </section>
         <section class="box" id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Desk with social media icons"/>
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Desk with social media icons."/>
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </section>
     </main>
+<!-- Aside section changes: Changed non-semantic div tags to aside and sections tags-->
     <aside class="benefits">
         <section class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Picture of a gear on a funnel above a dollar sign"/>
             <p>Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.</p>
         </section>
         <section class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
         </section>
         <section class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt=""/>
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </section>
     </aside>
+<!-- Footer section changes: Changed non-semantic div tag to footer tag-->
+<!-- Footer section changes: Changed h2 tag to h3 tag for better consistency-->
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h3>Made with ❤️️ by Horiseon</h3>
         <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
 </body>
